[project]
name = "mini-nodes"
description = "A collection of custom nodes for ComfyUI, featuring high-precision color matching (MKL, Wavelet, HM), latent size adjustment, and metadata-aware image saving."
version = "1.0.2"
license = "MIT" 
authors = [
    { name = "catmaxzj", email = "maxzjsh@gmail.com" }
]
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Repository = "https://github.com/catmaxzj/comfyui-mini-nodes"
Documentation = "https://github.com/catmaxzj/comfyui-mini-nodes/wiki"
"Bug Tracker" = "https://github.com/catmaxzj/comfyui-mini-nodes/issues"

[tool.comfy]
PublisherId = "catmaxzj"
DisplayName = "Comfyui-mini-nodes"
Icon = ""
includes = [
    "nodes_color_match.py",
    "node_info.json"
]